test/libsolidity/syntaxTests/storageLayoutSpecifier/increment_operator.sol
contract C layout at ++2 { }
// ----
// TypeError 4247: (23-24): Expression has to be an lvalue.
// TypeError 9767: (21-24): Built-in unary operator ++ cannot be applied to type int_const 2.
